Adding Swagger authentication to some routes
